--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ vaadin.launch-browser=true
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
+spring.data.mongodb.uri=mongodb+srv://Richie:ProyectoEstacionamiento2024@cluster0.qszj0ra.mongodb.net/
+spring.data.mongodb.database= Cluster0
